class mistake removed

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,12 +5,12 @@ website:
 main: HelloWorldPlugin
 
 commands:
-    whythehell:
+    HelloWorld:
       description: Fotzi!
       usage: /hello
 
     kill:
-      description: Kills thy Player!
+      description: Kills the Player!
       usage: /kill
 
 
